fixed error feedback
The site now gives feedback if the user successfully logged in

--- a/unit2/authentication/create.html
+++ b/unit2/authentication/create.html
@@ -1,14 +1,13 @@
-<!-- This is my create.html file so the user can sign up to use the site -->
+<!-- This is my signup.html file so the user can sign up to use our site -->
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Create User Page</title>
+	<title>Sign Up a New User Page</title>
 
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
     <!-- We are also adding the auth.js and database.js SDK-->
     <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
 
     <script>
     // Your web app's Firebase configuration
@@ -24,16 +23,19 @@
 	// Initialize Firebase
 	firebase.initializeApp(firebaseConfig);
 	</script>
-
-	<!-- Let's add the auth.js file we wrote-->
-	<script src="js/auth.js"></script>
 </head>
 <body>
-<div id="sign-up">
-	<input type="text" id="sign-up-username" placeholder="Username">
-	<input type="text" id="sign-up-email" placeholder="Email">
-	<input type="text" id="sign-up-password" placeholder="Password">
-	<button id="submit-sign-up">Sign Up</button>
-</div>
+    <div id="container">
+        <div id="heading"><h1>Sign Up a New User Page</h1></div>
+        <div id="sign-up">
+        	<input type="text" id="sign-up-username" placeholder="Username">
+        	<input type="text" id="sign-up-email" placeholder="Email">
+        	<input type="password" id="sign-up-password" placeholder="Password">
+        	<button id="submit-sign-up">Sign Up</button>
+        </div>
+    </div>
+
+    <!-- Let's add the create.js file -->
+    <script src="js/create.js"></script>
 </body>
 </html>
