--- a/unit2/authentication/index.html
+++ b/unit2/authentication/index.html
@@ -1,16 +1,43 @@
-<!-- This is my index.html file -->
+<!-- This is my index.html file so the user can log into use our site or go to the sign up page to sign up a new user to use the site -->
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Firebase Authentication Page</title>
-	<script src="js/auth.js"></script>
+	<title>Home Page</title>
+
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+    <!-- We are also adding the auth.js and database.js SDK-->
+    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
+
+    <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+    apiKey: "AIzaSyDiqr8W5aAyWsN17VxotM8Saf2ss2XQCv4",
+    authDomain: "mmp350-unit-2.firebaseapp.com",
+    databaseURL: "https://mmp350-unit-2.firebaseio.com",
+    projectId: "mmp350-unit-2",
+    storageBucket: "mmp350-unit-2.appspot.com",
+    messagingSenderId: "208695045080",
+    appId: "1:208695045080:web:e7991caa179807399a60ad"
+	};
+	// Initialize Firebase
+	firebase.initializeApp(firebaseConfig);
+	</script>
+
 </head>
 <body>
-<div id="sign-up">
-	<input type="text" id="sign-up-username" placeholder="Username">
-	<input type="text" id="sign-up-email" placeholder="Email">
-	<input type="text" id="sign-up-password" placeholder="Password">
-	<button id="submit-sign-up">Sign Up</button>
-</div>
+    <div id="container">
+        <div id="heading"><h1>Home Page</h1></div>
+
+        <div id="login">
+        	<input type="text" id="login-email" placeholder="Email">
+        	<input type="password" id="login-password" placeholder="Password">
+        	<button id="login-button">Login</button>
+            <p><a href="create.html">Create a new account.</p>
+        </div>
+    </div>
+
+    <!-- Let's add the auth.js file -->
+    <script src="js/auth.js"></script>
 </body>
 </html>
