--- a/unit2/authentication/index.html
+++ b/unit2/authentication/index.html
@@ -33,7 +33,7 @@
         	<input type="text" id="login-email" placeholder="Email">
         	<input type="password" id="login-password" placeholder="Password">
         	<button id="login-button">Login</button>
-            <p><a href="create.html">Create a new account.</p>
+            <p><a href="create.html">Create a new account</a>.</p>
         </div>
     </div>
 
